fix(styles): avoid word break in inline forms

--- a/projects/oblique/src/styles/scss/core/components/_form.scss
+++ b/projects/oblique/src/styles/scss/core/components/_form.scss
@@ -126,6 +126,7 @@ textarea {
 
 .ob-inline-form {
 	display: flex;
+	word-break: normal;
 
 	> * + * {
 		margin-left: $spacing-default;
